--- a/StrikingInvestigation/wwwroot/index.html
+++ b/StrikingInvestigation/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -18,7 +18,19 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <script>
+        window.SetFocusToElement = (element) => {
+            element.focus();
+        }
+
+        window.PlayBellAudio = (audioid) => {
+            var audio = document.getElementById(audioid);
+            audio.play();
+        }
+    </script>
 </body>
 
 </html>
